fix: yalb(alignment): increase callout padding between center border and content

--- a/components/02-molecules/callout/_yds-callout.scss
+++ b/components/02-molecules/callout/_yds-callout.scss
@@ -25,6 +25,14 @@ $callout-themes: map.deep-get(sass-tokens.$tokens, callout-themes);
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+
+    > *:nth-child(2n) {
+      padding-left: var(--size-spacing-9);
+    }
+
+    > *:nth-child(2n + 1):not(:last-child) {
+      padding-right: var(--size-spacing-9);
+    }
   }
 }
 
